part1/8.web-server_ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: ClusterIP
  selector:
    app: web-server
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 9090
